fix navbar responsive alignment

--- a/style.css
+++ b/style.css
@@ -12,20 +12,25 @@ body{
 
 #navbar{
   display:flex;
+  flex-direction:column;
   position:fixed;
   top:0px;
-  height:70px;
+  height:140px;
   width:100%;
   background-color:#112;
   align-items:center;
+  text-align:center;
   border:solid 2px #001;
-  justify-items:space-between;
+}
+
+#navbar a{
+  width:33.3%;
 }
 
 #navmain{
   display:flex;
   justify-content:space-around;
-  flex:10 1 auto;
+  width:100%;
 }
 
 .navlink{
@@ -37,16 +42,15 @@ body{
 #profiles{
 display:flex;  
 background-color:#223;
-justify-content:center;
+justify-content:space-around;
 align-items:center;  
+width:100%;
 height:100%;
-border-left-style:solid;
-border-color:#001;
-border-width:3px;
+text-align:center;
 }
 
 #welcome-section{
-  margin-top:70px;
+  margin-top:140px;
   padding: 20px 5px;
   display:flex;
   flex-direction:column;
@@ -121,8 +125,18 @@ border-width:3px;
 
 @media only screen and (min-width: 1000px)
 {
+  #navbar{
+    flex-direction:row;
+    height:70px;
+  }
+
+  #welcome-section{
+    margin-top:70px;
+  }
+
   #project-grid{
     grid-template-columns:repeat(3, 300px);
     grid-template-rows:repeat(2, 300px);
   }
+
 }
